// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
<div>
  <button
    class="css-acv1q0-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
<div>
  <button
    class="css-w71wo3-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
<div>
  <button
    class="css-xpdwzk-StyledButtonComponent e183qit0"
    color="secondary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    class="css-e4yukp-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
<div>
  <button
    class="css-qjeo74-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    class="css-1idu1p8-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-jh80j2-StyledButtonComponent-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="24"
      viewBox="0 0 29.37 21.88"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-13s2tzl-StyledButtonComponent-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="14"
      viewBox="0 0 29.37 21.88"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1qcz368-StyledButtonComponent-StyledButtonComponent e183qit0"
    color="secondary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1x28e43-StyledButtonComponent-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-xj8db-StyledButtonComponent-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-acv1q0-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-1apg407-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="20"
      viewBox="0 0 29.37 21.88"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with medium size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-3xuwu5-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-w71wo3-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="12"
      viewBox="0 0 29.37 21.88"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-xpdwzk-StyledButtonComponent e183qit0"
    color="secondary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-3xuwu5-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated text transform 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-qjeo74-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1idu1p8-StyledButtonComponent e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;
